<resources>
    <string name="app_name">Application</string>
    <string name="title_calendar">Calendar</string>
    <string name="title_exercises">Exercises</string>
    <string name="title_profile">Profile</string>
    <string name="button_name">Press Button</string>
    <string name="profile_name">Name: </string>
    <string name="profile_height">Height: </string>
    <string name="profile_weight">Weight: </string>
    <string name="profile_partner_name">Name: </string>
    <string name="profile_email">Email: </string>
    <string name="profile_phone">Phone: </string>
    <string name="profile_title2">Accountability partner</string>
    <string name="cal1">Monday</string>
    <string name="cal2">"    Chin ups, 12"</string>
    <string name="cal3">"    Running, 0.25 miles"</string>
    <string name="cal4">Tuesday</string>
    <string name="cal5">Wednesday</string>
    <string name="cal6">"    Biking, 0.5 miles"</string>
    <string name="cal7">Thursday</string>
    <string name="cal8">Friday</string>
    <string name="cal9">"    Shoulder Stretch, 15 seconds"</string>
    <string name="cal10">"    Running, 0.25 miles"</string>
    <string name="cal11">Saturday</string>
    <string name="cal12">"    Chin ups, 15           Milestone Test: Chin ups"</string>
    <string name="cal13">Sunday</string>
    <string name="cal14">"    Crunches, 30"</string>
    <string name="cal15">"    Biking, 0.5 miles"</string>
    <string name="exercises_head">Exercises</string>
    <string name="exercise_button">+</string>

</resources>