<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_calendar">

    <fragment
        android:id="@+id/navigation_calendar"
        android:name="com.example.application.ui.calendar.CalendarFragment"
        android:label="@string/title_calendar"
        tools:layout="@layout/fragment_exercises" />

    <fragment
        android:id="@+id/navigation_exercises"
        android:name="com.example.application.ui.exercises.ExercisesFragment"
        android:label="@string/title_exercises"
        tools:layout="@layout/fragment_calendar" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.application.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>